n/a - May 16, 2004

	* Added sysklogd configuration file
	* Added example /etc/sysconfig/console file
	* Do not attempt to populate /dev if that directory has already been
	  set up earlier in bootup (such as on initramfs/initrd)
	* Prevent excessive kernel output once klogd starts

n/a - May 15, 2004

	* Namespace rework (enumeration of scripts is now cleaner)
	* Removed directories: blfs, contrib/new-boot-0.2, contrib/rlv

n/a - May 13, 2004

	* Repaired the console script
	* Added a check to cleanfs [createfiles], to make sure that we have
	  a valid devicetype, if we have type=dev

n/a - May 11, 2004

	* Added usbfs to mountkernfs and mountfs

n/a - May 6, 2004

	* Don't use loadproc in localnet, it's not meant for that
	* Quote tests of $PIDFILE, so that things behave when it's empty
	* Removed unused kill -0 from killproc

2.1.0 - May 4, 2004

	* Update to the console script, prevent install of the console script
	* Chgrp /var/run/utmp to group utmp if it exists.
	* Moved udev from contrib to lfs
	* Moved GATEWAY setup from /etc/rc.d/init.d/network to
	  /etc/sysconfig/network-devices/services/static
	* Use the contents of $PIDFILE, if it is set in the script
	* Tagged as 2.1.0.

n/a - April 30, 2004

	* Moved the loadkeys script to console, and added setfont.  Contributed
	  by Alexander E. Patrakov

2.0.5 - April 29, 2004

	* Added the heimdal init script.
	* Tagged as 2.0.5

2.0.4 - April 27, 2004

	* Tagged as 2.0.4

n/a - April 24, 2004

	* Added a example script for /etc/sysconfig/createfiles
	* Added a check for /sys before mounting sysfs
	* Added -t noramfs to umount on /etc/rc.d/init.d/mountfs.
	  This will prevent /dev from being unmounted, if /proc/mounts
	  is symlinked to /etc/mtab

n/a - April 18, 2004

	* Small fix to a if statement in netfs

n/a - April 17, 2004

	* Added the lisa bootscript, lisa is part of the KDE Network package
	* Add proper error checking to the mountfs script when writing out mtab